# DebInstaller

./: CMakeLists.txt  DebInstaller.kdev4  Messages.sh
.kdev4/: DebInstaller.kdev4
icons/: CMakeLists.txt
src/: CMakeLists.txt  debinstaller.ui  debinstallerwindow.cpp  debinstallerwindow.h  main.cpp  net.prime-hack.debinstaller.appdata.xml  net.prime-hack.debinstaller.desktop  org.example.debinstaller.appdata.xml  org.example.debinstaller.desktop
